Adopt features from Java 11